--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Entregable Grupo 8</title>
     <!-- <link rel="stylesheet" href="style_landing.css"> -->
-    <link rel="stylesheet" href="new_styles.css">
+    <link rel="stylesheet" href="style_landing.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
@@ -59,7 +59,7 @@
             <article class="col-12 col-md-6 border-end border-md-0 p-4 pe-md-5">
 
                 <h3 class="text-start">Lorem ipsum</h3>
-                <img class="float-start pe-4" src="Material_Entregable1/img/1.jpg" alt="desc 1">
+                <img class="float-start pe-4" src="img/1.jpg" alt="desc 1">
                 <p class="p_who_we_are" id="parrafo-borde">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                     Saepe aperiam ducimus
                     cupiditate minus, porro labore illum voluptatem optio commodi, quis rerum excepturi accusamus
@@ -87,7 +87,7 @@
                         cupiditate minus, porro labore illum voluptatem optio commodi, quis rerum excepturi accusamus
                     </p>
                     <aside><a href="#">
-                            <img class="d-none d-md-block" src="Material_Entregable1/img/ad.jpg" alt="desc 1">
+                            <img class="d-none d-md-block" src="img/ad.jpg" alt="desc 1">
                         </a></aside>
                     <article class="pt-4">
 
@@ -216,15 +216,15 @@
                 </h3>
             </article>
             <figure class="row row-gap-4 p-5">
-                <img class="img img_rotate col-12 col-md-6 col-lg-4" src="Material_Entregable1/img/2.jpg" alt="desc 1">
-                <img class="img img_rotate col-12 col-md-6 col-lg-4" src="Material_Entregable1/img/3.jpg" alt="desc 1">
-                <img class="img img_rotate col-12 col-md-6 col-lg-4" src="Material_Entregable1/img/4.jpg" alt="desc 1">
-                <img class="img img_rotate col-12 col-md-6 col-lg-4" src="Material_Entregable1/img/5.jpg" alt="desc 1">
-                <img class="img img_circle col-12 col-md-6 col-lg-4" src="Material_Entregable1/img/6.jpg" alt="desc 1">
-                <img class="img img_rotate col-12 col-md-6 col-lg-4" src="Material_Entregable1/img/7.jpg" alt="desc 1">
-                <img class="img img_rotate col-12 col-md-6 col-lg-4" src="Material_Entregable1/img/8.jpg" alt="desc 1">
-                <img class="img img_rotate col-12 col-md-6 col-lg-4" src="Material_Entregable1/img/9.jpg" alt="desc 1">
-                <img class="img img_rotate col-12 col-md-6 col-lg-4 mx-auto " src="Material_Entregable1/img/10.jpg"
+                <img class="img img_rotate col-12 col-md-6 col-lg-4" src="img/2.jpg" alt="desc 1">
+                <img class="img img_rotate col-12 col-md-6 col-lg-4" src="img/3.jpg" alt="desc 1">
+                <img class="img img_rotate col-12 col-md-6 col-lg-4" src="img/4.jpg" alt="desc 1">
+                <img class="img img_rotate col-12 col-md-6 col-lg-4" src="img/5.jpg" alt="desc 1">
+                <img class="img img_circle col-12 col-md-6 col-lg-4" src="img/6.jpg" alt="desc 1">
+                <img class="img img_rotate col-12 col-md-6 col-lg-4" src="img/7.jpg" alt="desc 1">
+                <img class="img img_rotate col-12 col-md-6 col-lg-4" src="img/8.jpg" alt="desc 1">
+                <img class="img img_rotate col-12 col-md-6 col-lg-4" src="img/9.jpg" alt="desc 1">
+                <img class="img img_rotate col-12 col-md-6 col-lg-4 mx-auto " src="img/10.jpg"
                     alt="desc 1">
             </figure>
 
